--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -21,11 +21,11 @@
     <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%; background-color: rgb(22, 22, 22);">
      <div class="kobweb-box kobweb-align-top-center" style="width: 100%;">
       <div class="kobweb-box kobweb-align-center" style="width: 100%;" id="about_company">
-       <img class="silk-image" style="width: 100%; object-fit: cover;" src="/banner.png" alt="Cover">
+       <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/banner.jpg" alt="Cover">
        <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(108, 107, 103, 0), rgba(108, 107, 103, 0));"></div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 90%; max-width: 1240px; padding: 50px 0px; margin: 0px 20px;">
         <span class="silk-span-text" style="font-size: 90px; line-height: 94px; font-weight: 500; color: white; white-space: pre-wrap; text-align: start;">Лидеры аренды автомобилей в Бишкеке</span><span class="silk-span-text" style="margin: 42px 0px 0px; font-size: 30px; line-height: 40px; letter-spacing: 2px; color: white; white-space: pre-wrap; text-align: start;">Аренда автомобиля за 15 минут — быстро, удобно, надежно.</span>
-        <div class="default-button kobweb-box kobweb-align-center" style="margin: 32px 0px 0px; padding: 1.5% 5%; font-weight: bold; font-size: 30px; border-radius: 80px;">
+        <div class="default-button kobweb-box kobweb-align-center" style="margin: 42px 0px 0px; padding: 1.5% 5%; font-weight: bold; font-size: 22px; border-radius: 80px;">
          ВЫБРАТЬ АВТОМОБИЛЬ
         </div>
        </div>
@@ -34,7 +34,7 @@
        <div class="kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="width: 100%; max-width: 1240px; height: 10vh;">
         <span class="silk-span-text" style="flex-grow: 1; margin: 0px 50px 0px 0px; cursor: pointer; font-size: 24px; color: white;">CARRENT.KG</span>
         <div class="kobweb-row kobweb-arrange-end kobweb-align-center-vert" style="flex-grow: 1;">
-         <a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none;" href="#about_company">О КОМПАНИИ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">АВТОПАРК</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none;" href="#rental_terms">УСЛОВИЯ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none;" href="#contacts">КОНТАКТЫ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a>
+         <a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#about_company">О КОМПАНИИ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#carpark">АВТОПАРК</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#rental_terms">УСЛОВИЯ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#contacts">КОНТАКТЫ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="tel:+996772330507">+996 (772) 33-05-07</a>
         </div>
        </div>
       </div>
@@ -92,48 +92,48 @@
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 32px 0px 0px;">
-       <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 32px 0px; cursor: pointer;">
-        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-top" style="width: 100%;">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">С какого возраста я могу арендовать автомобиль?</span>
-         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
-          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
-         </div>
+        </div>
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+         <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 32px 0px; cursor: pointer;">
-        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-top" style="width: 100%;">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что нужно для аренды автомобиля?</span>
-         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
-          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
-         </div>
+        </div>
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+         <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 32px 0px; cursor: pointer;">
-        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-top" style="width: 100%;">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Сколько километров я могу проехать на автомобиле?</span>
-         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
-          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
-         </div>
+        </div>
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+         <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 32px 0px; cursor: pointer;">
-        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-top" style="width: 100%;">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать, если я получу штраф ПДД или нарушу скоростной режим?</span>
-         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
-          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
-         </div>
+        </div>
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+         <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 32px 0px; cursor: pointer;">
-        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-top" style="width: 100%;">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать если я попал в ДТП?</span>
-         <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
-          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
-         </div>
+        </div>
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+         <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
@@ -151,7 +151,7 @@
           <div class="kobweb-box kobweb-align-top-start" style="height: 60px; width: 6px; background-color: rgb(72, 72, 72); border-radius: 6px;"></div><span class="silk-span-text" style="margin: 0px 0px 0px 10px; font-size: 34px; line-height: 36px; color: white;">CONTACTS</span>
          </div>
         </div><span class="silk-span-text" style="max-width: 460px; font-size: 20px; line-height: 30px; padding: 8px 0px 6px; font-weight: 300; color: white;">Мы всегда рады видеть вас! У нас вы можете быстро и комфортно оформить все необходимое для аренды автомобиля.</span>
-       </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a><span class="silk-span-text" style="margin: 4px 0px 0px; font-size: 90px; line-height: 90px; color: white; font-weight: 500;">info@rentacar.kg</span><span class="silk-span-text" style="margin: 40px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, пр.Мира 123, здание 1, офис 4</span>
+       </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a><a class="silk-link" style="margin: 4px 0px 0px; font-size: 90px; line-height: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="mailto:info@rentacar.kg?subject=%D0%AF%20%D1%85%D0%BE%D1%87%D1%83%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D1%80%D0%B5%D0%BD%D0%B4%D1%8B%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D1%8B.">info@rentacar.kg</a><span class="silk-span-text" style="margin: 40px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, пр.Мира 123, здание 1, офис 4</span>
        <div class="default-button kobweb-align-center-horiz-self kobweb-box kobweb-align-center" style="margin: 100px 0px 0px; padding: 2% 8%; border-radius: 80px;">
         <span class="silk-span-text" style="font-weight: bold; font-size: 24px; letter-spacing: 1.2px;">ПОЗВОНИТЕ НАМ</span>
        </div>
