--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="silk-colors_light">
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>CarRentKg</title>
-  <meta content="Powered by Kobweb" name="description">
-  <link href="/favicon.ico" rel="icon">
+  <title>Аренда авто в Бишкеке за 15 минут — CarRent.kg</title>
+  <meta content="Широкий выбор автомобилей: эконом, комфорт, кроссоверы. Прозрачные условия аренды, без скрытых платежей. Быстрое оформление и поддержка 24/7. Забронируйте авто онлайн или по телефону +996 (772) 33-05-07." name="description">
+  <link href="/logo_no_bg.svg" rel="icon">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/fonts/faces.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -21,7 +21,7 @@
     <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%; background-color: rgb(22, 22, 22);">
      <div class="kobweb-box kobweb-align-top-center" style="width: 100%;">
       <div class="kobweb-box kobweb-align-center" style="width: 100%;" id="about_company">
-       <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/banner.jpg" alt="Cover">
+       <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/banner.jpg" alt="Аренда автомобилей в Бишкеке">
        <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(108, 107, 103, 0), rgba(108, 107, 103, 0));"></div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 90%; max-width: 1240px; padding: 50px 0px; margin: 0px 20px;">
         <span class="silk-span-text" style="font-size: 90px; line-height: 94px; font-weight: 500; color: white; white-space: pre-wrap; text-align: start;">Лидеры аренды автомобилей в Бишкеке</span><span class="silk-span-text" style="margin: 42px 0px 0px; font-size: 30px; line-height: 40px; letter-spacing: 2px; color: white; white-space: pre-wrap; text-align: start;">Аренда автомобиля за 15 минут — быстро, удобно, надежно.</span>
@@ -66,17 +66,24 @@
         </div>
         <div class="silk-simple-grid" style="--silk-simple-grid-col-count-zero: 1; --silk-simple-grid-col-count-sm: 1; --silk-simple-grid-col-count-md: 3; --silk-simple-grid-col-count-lg: 3; --silk-simple-grid-col-count-xl: 3; width: 100%; margin: 24px 0px 0px; gap: 20px;">
          <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: pointer;">
-          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/sonata_2018_silver/2018-Hyundai-Sonata-107.jpg" alt="Post Thumbnail Image">
+          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/sonata_2018_silver/2018-Hyundai-Sonata-107.jpg" alt="Аренда Hyundai Sonata 2018 в Бишкеке от 3500">
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
           <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
            <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Hyundai Sonata</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">3500 сом</span>
           </div>
          </div>
          <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: pointer;">
-          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/sonata_2018_black/9cd7c0b9-8914-41cc-b36d-11007bfd78f8-2018HyundaiSonata5.jpg" alt="Post Thumbnail Image">
+          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/sonata_2018_black/9cd7c0b9-8914-41cc-b36d-11007bfd78f8-2018HyundaiSonata5.jpg" alt="Аренда Hyundai Sonata 2018 в Бишкеке от 3500">
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
           <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
            <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Hyundai Sonata</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">3500 сом</span>
+          </div>
+         </div>
+         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: not-allowed;">
+          <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/optima_2018_white/2018-kia-optima-white.jpg" alt="Аренда Kia Optima 2018 в Бишкеке от 3500">
+          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
+          <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
+           <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Kia Optima</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">Нет в наличии</span>
           </div>
          </div>
         </div>
@@ -151,7 +158,7 @@
           <div class="kobweb-box kobweb-align-top-start" style="height: 60px; width: 6px; background-color: rgb(72, 72, 72); border-radius: 6px;"></div><span class="silk-span-text" style="margin: 0px 0px 0px 10px; font-size: 34px; line-height: 36px; color: white;">CONTACTS</span>
          </div>
         </div><span class="silk-span-text" style="max-width: 460px; font-size: 20px; line-height: 30px; padding: 8px 0px 6px; font-weight: 300; color: white;">Мы всегда рады видеть вас! У нас вы можете быстро и комфортно оформить все необходимое для аренды автомобиля.</span>
-       </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a><a class="silk-link" style="margin: 4px 0px 0px; font-size: 90px; line-height: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="mailto:info@rentacar.kg?subject=%D0%AF%20%D1%85%D0%BE%D1%87%D1%83%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D1%80%D0%B5%D0%BD%D0%B4%D1%8B%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D1%8B.">info@rentacar.kg</a><span class="silk-span-text" style="margin: 40px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, пр.Мира 123, здание 1, офис 4</span>
+       </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a><a class="silk-link" style="margin: 4px 0px 0px; font-size: 90px; line-height: 90px; color: white; font-weight: 500; text-decoration-line: none;" href="mailto:info@rentacar.kg?subject=%D0%AF%20%D1%85%D0%BE%D1%87%D1%83%20%D1%83%D0%B7%D0%BD%D0%B0%D1%82%D1%8C%20%D0%BD%D0%B0%D1%81%D1%87%D0%B5%D1%82%20%D0%B0%D1%80%D0%B5%D0%BD%D0%B4%D1%8B%20%D0%BC%D0%B0%D1%88%D0%B8%D0%BD%D1%8B.">info@rentacar.kg</a><span class="silk-span-text" style="margin: 40px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, Юнусалиева, 85</span>
        <div class="default-button kobweb-align-center-horiz-self kobweb-box kobweb-align-center" style="margin: 100px 0px 0px; padding: 2% 8%; border-radius: 80px;">
         <span class="silk-span-text" style="font-weight: bold; font-size: 24px; letter-spacing: 1.2px;">ПОЗВОНИТЕ НАМ</span>
        </div>
