--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Аренда авто в Бишкеке за 15 минут — CarRent.kg</title>
   <meta content="Широкий выбор автомобилей: эконом, комфорт, кроссоверы. Прозрачные условия аренды, без скрытых платежей. Быстрое оформление и поддержка 24/7. Забронируйте авто онлайн или по телефону +996 (772) 33-05-07." name="description">
-  <link href="/logo_no_bg.svg" rel="icon">
+  <link href="/favicon.png" rel="icon">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/fonts/faces.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
