--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -12,18 +12,15 @@
   <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" type="image/png">
   <meta content="CarRent" name="apple-mobile-web-app-title">
   <link href="/favicon/site.webmanifest" rel="manifest">
+  <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-KS945LF7"></script>
+  <script src="/gtm.js"></script>
   <link href="/fonts/faces.css" rel="stylesheet">
-  <script src="/gtag.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16845554442"></script>
-  <script>window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-
-gtag('config', 'AW-16845554442');</script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-  <script type="text/javascript" async src="https://googleads.g.doubleclick.net/pagead/viewthroughconversion/16845554442/?random=1738432960916&amp;cv=11&amp;fst=1738432960916&amp;bg=ffffff&amp;guid=ON&amp;async=1&amp;gtm=45be51u0za200&amp;gcd=13l3l3l3l1l1&amp;dma=0&amp;tag_exp=102067808~102081485~102123608~102482432~102528644~102539968~102546754&amp;u_w=1280&amp;u_h=720&amp;url=http%3A%2F%2Flocalhost%3A8081%2F%3F_kobwebIsExporting%3Dtrue&amp;hn=www.googleadservices.com&amp;frm=0&amp;tiba=%D0%90%D1%80%D0%B5%D0%BD%D0%B4%D0%B0%20%D0%B0%D0%B2%D1%82%D0%BE%20%D0%B2%20%D0%91%D0%B8%D1%88%D0%BA%D0%B5%D0%BA%D0%B5%20%D0%B7%D0%B0%2010%20%D0%BC%D0%B8%D0%BD%D1%83%D1%82%20%E2%80%94%20CarRent.kg&amp;npa=0&amp;pscdl=noapi&amp;auid=257247583.1738432961&amp;uaa=arm&amp;uab=64&amp;uafvl=Not)A%253BBrand%3B99.0.0.0%7CHeadlessChrome%3B127.0.6533.17%7CChromium%3B127.0.6533.17&amp;uamb=0&amp;uam=&amp;uap=macOS&amp;uapv=15.1.1&amp;uaw=0&amp;fdr=QA&amp;data=event%3Dgtag.config&amp;rfmt=3&amp;fmt=4"></script>
  </head>
  <body>
+  <noscript>
+   <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS945LF7" height="0" width="0" style="display: none; visibility: hidden;"></iframe>
+  </noscript>
   <div id="root" style="width: 100%; height: 100%;">
    <style>@layer reset, kobweb-compose, base, component-styles, component-variants, restricted-styles, general-styles;@layer reset {  html, body { padding: 0px; margin: 0px; }  * { box-sizing: border-box; }}</style>
    <style>@layer reset, kobweb-compose, base, component-styles, component-variants, restricted-styles, general-styles;@layer kobweb-compose {  .kobweb-box { display: grid; grid-template-columns: minmax(0px, 1fr); grid-template-rows: minmax(0px, 1fr); }  .kobweb-box > * { grid-area: 1 / 1; }  .kobweb-box.kobweb-align-top-start { place-items: start; }  .kobweb-box.kobweb-align-top-center { place-items: start center; }  .kobweb-box.kobweb-align-top-end { place-items: start end; }  .kobweb-box.kobweb-align-center-start { place-items: center start; }  .kobweb-box.kobweb-align-center { place-items: center; }  .kobweb-box.kobweb-align-center-end { place-items: center end; }  .kobweb-box.kobweb-align-bottom-start { place-items: end start; }  .kobweb-box.kobweb-align-bottom-center { place-items: end center; }  .kobweb-box.kobweb-align-bottom-end { place-items: end; }  .kobweb-box > .kobweb-align-top-start-self { place-self: start; }  .kobweb-box > .kobweb-align-top-center-self { place-self: start center; }  .kobweb-box > .kobweb-align-top-end-self { place-self: start end; }  .kobweb-box > .kobweb-align-center-start-self { place-self: center start; }  .kobweb-box > .kobweb-align-center-self { place-self: center; }  .kobweb-box > .kobweb-align-center-end-self { place-self: center end; }  .kobweb-box > .kobweb-align-bottom-start-self { place-self: end start; }  .kobweb-box > .kobweb-align-bottom-center-self { place-self: end center; }  .kobweb-box > .kobweb-align-bottom-end-self { place-self: end; }  .kobweb-col { display: flex; flex-direction: column; }  .kobweb-col.kobweb-arrange-top { justify-content: flex-start; }  .kobweb-col.kobweb-arrange-center { justify-content: center; }  .kobweb-col.kobweb-arrange-bottom { justify-content: flex-end; }  .kobweb-col.kobweb-arrange-space-evenly { justify-content: space-evenly; }  .kobweb-col.kobweb-arrange-space-between { justify-content: space-between; }  .kobweb-col.kobweb-arrange-space-around { justify-content: space-around; }  .kobweb-col.kobweb-align-start { align-items: flex-start; }  .kobweb-col.kobweb-align-center-horiz { align-items: center; }  .kobweb-col.kobweb-align-end { align-items: flex-end; }  .kobweb-col > .kobweb-align-start-self { align-self: flex-start; }  .kobweb-col > .kobweb-align-center-horiz-self { align-self: center; }  .kobweb-col > .kobweb-align-end-self { align-self: flex-end; }  .kobweb-row { display: flex; flex-direction: row; }  .kobweb-row.kobweb-arrange-start { justify-content: flex-start; }  .kobweb-row.kobweb-arrange-center { justify-content: center; }  .kobweb-row.kobweb-arrange-end { justify-content: flex-end; }  .kobweb-row.kobweb-arrange-space-evenly { justify-content: space-evenly; }  .kobweb-row.kobweb-arrange-space-between { justify-content: space-between; }  .kobweb-row.kobweb-arrange-space-around { justify-content: space-around; }  .kobweb-row.kobweb-align-top { align-items: flex-start; }  .kobweb-row.kobweb-align-center-vert { align-items: center; }  .kobweb-row.kobweb-align-bottom { align-items: flex-end; }  .kobweb-row > .kobweb-align-top-self { align-self: flex-start; }  .kobweb-row > .kobweb-align-center-vert-self { align-self: center; }  .kobweb-row > .kobweb-align-bottom-self { align-self: flex-end; }  .kobweb-spacer { flex-grow: 1; }  .kobweb-row.kobweb-arrange-spaced-by { column-gap: var(--kobweb-arrange-spaced-by); }  .kobweb-col.kobweb-arrange-spaced-by { row-gap: var(--kobweb-arrange-spaced-by); }}</style>
@@ -199,6 +196,6 @@ gtag('config', 'AW-16845554442');</script>
      </div></button>
    </div>
   </div>
-  <script src="/CarRentKg.js"></script><iframe height="0" width="0" style="display: none; visibility: hidden;"></iframe>
+  <script src="/CarRentKg.js"></script>
  </body>
 </html>
