--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -12,6 +12,7 @@
   <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" type="image/png">
   <meta content="CarRent" name="apple-mobile-web-app-title">
   <link href="/favicon/site.webmanifest" rel="manifest">
+  <script type="text/javascript" async src="https://www.googletagmanager.com/gtag/js?id=G-XC00NWY593&amp;l=dataLayer&amp;cx=c&amp;gtm=45He51u0v9205283533za200"></script>
   <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-KS945LF7"></script>
   <script src="/gtm.js"></script>
   <link href="/fonts/faces.css" rel="stylesheet">
@@ -43,7 +44,7 @@
        <div class="kobweb-row kobweb-arrange-start kobweb-align-center-vert" style="width: 100%; max-width: 1240px; height: 10vh;">
         <span class="silk-span-text" style="flex-grow: 1; margin: 0px 50px 0px 0px; cursor: pointer; font-size: 24px; color: white;">CARRENT.KG</span>
         <div class="kobweb-row kobweb-arrange-end kobweb-align-center-vert" style="flex-grow: 1;">
-         <a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#about_company">О КОМПАНИИ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#carpark">АВТОПАРК</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#rental_terms">УСЛОВИЯ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#contacts">КОНТАКТЫ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="">+996 (772) 33-05-07</a>
+         <a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#about_company">О КОМПАНИИ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#carpark">АВТОПАРК</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#rental_terms">УСЛОВИЯ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="#contacts">КОНТАКТЫ</a><a class="silk-link" style="flex-grow: 1; margin: 0px 0px 0px 24px; font-size: 18px; color: white; text-decoration-line: none; white-space: nowrap;" href="tel:+996772330507" id="contact">+996 (772) 33-05-07</a>
         </div>
        </div>
       </div>
@@ -167,8 +168,8 @@
           <div class="kobweb-box kobweb-align-top-start" style="height: 60px; width: 6px; background-color: rgb(72, 72, 72); border-radius: 6px;"></div><span class="silk-span-text" style="margin: 0px 0px 0px 10px; font-size: 34px; line-height: 36px; color: white;">CONTACTS</span>
          </div>
         </div><span class="silk-span-text" style="max-width: 460px; font-size: 20px; line-height: 30px; padding: 8px 0px 6px; font-weight: 300; color: white;">Мы всегда рады видеть вас! У нас вы можете быстро и комфортно оформить все необходимое для аренды автомобиля.</span>
-       </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a><span class="silk-span-text" style="margin: 24px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, Юнусалиева, 85</span>
-       <div class="default-button kobweb-align-center-horiz-self kobweb-box kobweb-align-center" style="margin: 100px 0px 0px; padding: 2% 8%; border-radius: 80px;">
+       </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507" id="contact">+996 (772) 33-05-07</a><span class="silk-span-text" style="margin: 24px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, Юнусалиева, 85</span>
+       <div class="default-button kobweb-align-center-horiz-self kobweb-box kobweb-align-center" style="margin: 100px 0px 0px; padding: 2% 8%; border-radius: 80px;" id="contact">
         <span class="silk-span-text" style="font-weight: bold; font-size: 24px; letter-spacing: 1.2px;">ПОЗВОНИТЕ НАМ</span>
        </div>
       </div>
@@ -186,7 +187,7 @@
         <span class="silk-span-text" style="font-size: 18px; color: white; opacity: 0.7; margin: 0px 0px 16px;">АВТОПАРК</span><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Эконом класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Премиум класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Внедорожники</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Электромобили</a>
        </div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="flex-grow: 1;">
-        <span class="silk-span-text" style="font-size: 36px; color: white; cursor: pointer; text-decoration-line: none;">+996 (772) 33-05-07</span>
+        <a class="silk-link" style="font-size: 36px; color: white; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a>
        </div>
       </div>
      </div>
