--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -35,7 +35,7 @@
        <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background: linear-gradient(90deg, rgba(0, 0, 0, 0.8), rgba(108, 107, 103, 0), rgba(108, 107, 103, 0));"></div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 90%; max-width: 1240px; padding: 50px 0px; margin: 0px 20px;">
         <span class="silk-span-text" style="font-size: 90px; line-height: 94px; font-weight: 500; color: white; white-space: pre-wrap; text-align: start;">Лидеры аренды автомобилей в Бишкеке</span><span class="silk-span-text" style="margin: 42px 0px 0px; font-size: 30px; line-height: 40px; letter-spacing: 2px; color: white; white-space: pre-wrap; text-align: start;">Аренда автомобиля за 10 минут — быстро, удобно, надежно.</span>
-        <div class="default-button kobweb-box kobweb-align-center" style="margin: 42px 0px 0px; padding: 1.6% 5%; font-weight: bold; font-size: 22px; border-radius: 80px;">
+        <div class="default-button kobweb-box kobweb-align-center" style="margin: 42px 0px 0px; padding: 1.6% 5%; font-weight: bold; font-size: 22px; border-radius: 80px;" id="btn_choose_car">
          ВЫБРАТЬ АВТОМОБИЛЬ
         </div>
        </div>
@@ -61,35 +61,35 @@
          </div><span class="silk-span-text" style="max-width: 460px; font-size: 20px; line-height: 30px; padding: 8px 0px 6px; font-weight: 300; color: white;">Планируете поездку с семьёй за город или весёлые выходные с друзьями? Мы следим за трендами и спросом, чтобы предложить вам обновлённые автомобили вашей любимой марки.</span>
         </div>
         <div class="kobweb-row kobweb-arrange-start kobweb-align-top" style="width: 100%; margin: 72px 0px 0px;">
-         <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;">
+         <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;" id="economy">
           <span class="silk-span-text" style="font-size: 18px; margin: 0px 0px 16px; font-weight: bold; color: white; user-select: none;">ЭКОНОМ КЛАСС</span>
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 4px; background-color: rgb(72, 72, 72); margin: 0px; opacity: 1; border-radius: 4px;"></div>
          </div>
-         <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;">
+         <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;" id="comfort">
           <span class="silk-span-text" style="font-size: 18px; margin: 0px 0px 16px; font-weight: normal; color: white; user-select: none;">КОМФОРТ КЛАСС</span>
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 2px; background-color: rgb(72, 72, 72); margin: 1px 0px 0px; opacity: 0.2; border-radius: 0px;"></div>
          </div>
-         <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;">
+         <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;" id="crossover">
           <span class="silk-span-text" style="font-size: 18px; margin: 0px 0px 16px; font-weight: normal; color: white; user-select: none;">КРОССОВЕР</span>
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 2px; background-color: rgb(72, 72, 72); margin: 1px 0px 0px; opacity: 0.2; border-radius: 0px;"></div>
          </div>
         </div>
         <div class="silk-simple-grid" style="--silk-simple-grid-col-count-zero: 1; --silk-simple-grid-col-count-sm: 1; --silk-simple-grid-col-count-md: 3; --silk-simple-grid-col-count-lg: 3; --silk-simple-grid-col-count-xl: 3; width: 100%; margin: 24px 0px 0px; gap: 20px;">
-         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: pointer;">
+         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: pointer;" id="sonata_2018_silver">
           <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/sonata_2018_silver/2018-Hyundai-Sonata-107.jpg" alt="Аренда Hyundai Sonata 2018 в Бишкеке от 3500">
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
           <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
            <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Hyundai Sonata</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">3500 сом</span>
           </div>
          </div>
-         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: pointer;">
+         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: pointer;" id="sonata_2018_black">
           <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/sonata_2018_black/9cd7c0b9-8914-41cc-b36d-11007bfd78f8-2018HyundaiSonata5.jpg" alt="Аренда Hyundai Sonata 2018 в Бишкеке от 3500">
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
           <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
            <span class="silk-span-text" style="font-size: 40px; line-height: 44px; color: white; font-weight: bold;">Hyundai Sonata</span><span class="silk-span-text" style="margin: 6px 0px 0px; font-size: 20px; color: white; font-weight: bold;">3500 сом</span>
           </div>
          </div>
-         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: not-allowed;">
+         <div class="kobweb-box kobweb-align-top-start" style="width: 360px; height: 272px; cursor: not-allowed;" id="k5_2018_white">
           <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="/k5_2018_white/2018-kia-optima-white.jpg" alt="Аренда Kia Optima 2018 в Бишкеке от 3500">
           <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));"></div>
           <div class="kobweb-align-bottom-start-self kobweb-col kobweb-arrange-top kobweb-align-start" style="margin: 0px 0px 40px 20px;">
@@ -110,46 +110,46 @@
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 32px 0px 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_age">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">С какого возраста я могу арендовать автомобиль?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_age">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_docs">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что нужно для аренды автомобиля?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_docs">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_limit">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Сколько километров я могу проехать на автомобиле?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_limit">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_fines">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать, если я получу штраф ПДД или нарушу скоростной режим?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_fines">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
        <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_accident">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать если я попал в ДТП?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_accident">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
@@ -187,7 +187,7 @@
         <span class="silk-span-text" style="font-size: 18px; color: white; opacity: 0.7; margin: 0px 0px 16px;">АВТОПАРК</span><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Эконом класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Премиум класс</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Внедорожники</a><a class="silk-link" style="margin: 8px 0px 0px; font-size: 18px; color: white; text-decoration-line: none;" href="#carpark">Электромобили</a>
        </div>
        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="flex-grow: 1;">
-        <a class="silk-link" style="font-size: 36px; color: white; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507">+996 (772) 33-05-07</a>
+        <a class="silk-link" style="font-size: 36px; color: white; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507" id="footer_call">+996 (772) 33-05-07</a>
        </div>
       </div>
      </div>
