--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -109,47 +109,47 @@
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 32px 0px 0px;">
-       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_age">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_age">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">С какого возраста я могу арендовать автомобиль?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_age">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_age">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_docs">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_docs">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что нужно для аренды автомобиля?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_docs">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_docs">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_limit">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_limit">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Сколько километров я могу проехать на автомобиле?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_limit">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_limit">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_fines">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_fines">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать, если я получу штраф ПДД или нарушу скоростной режим?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_fines">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_fines">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
        <hr class="silk-horizontal-divider" style="width: 100%; color: white; margin: 0px;">
-       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%; padding: 26px 0px; cursor: pointer;">
-        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%;" id="rental_accident">
+       <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 100%;">
+        <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; padding: 30px 0px; cursor: pointer;" id="rental_accident">
          <span class="silk-span-text" style="font-size: 30px; line-height: 36px; color: white; margin: 0px 16px 0px 0px;">Что делать если я попал в ДТП?</span>
         </div>
-        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0;" id="rental_accident">
+        <div class="default-button kobweb-box kobweb-align-center" style="width: 48px; height: 48px; border-radius: 50%; flex-shrink: 0; cursor: pointer;" id="rental_accident">
          <img class="silk-image" style="width: 18px; height: 18px; color: white; rotate: 0deg;" src="/ic_plus.svg" alt="">
         </div>
        </div>
