--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -63,15 +63,15 @@
         <div class="kobweb-row kobweb-arrange-start kobweb-align-top" style="width: 100%; margin: 72px 0px 0px;">
          <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;" id="economy">
           <span class="silk-span-text" style="font-size: 18px; margin: 0px 0px 16px; font-weight: bold; color: white; user-select: none;">ЭКОНОМ КЛАСС</span>
-          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 4px; background-color: rgb(72, 72, 72); margin: 0px; opacity: 1; border-radius: 4px;"></div>
+          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 4px; background-color: rgb(72, 72, 72); margin: 0px; opacity: 1; border-radius: 4px; pointer-events: none;"></div>
          </div>
          <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;" id="comfort">
           <span class="silk-span-text" style="font-size: 18px; margin: 0px 0px 16px; font-weight: normal; color: white; user-select: none;">КОМФОРТ КЛАСС</span>
-          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 2px; background-color: rgb(72, 72, 72); margin: 1px 0px 0px; opacity: 0.2; border-radius: 0px;"></div>
+          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 2px; background-color: rgb(72, 72, 72); margin: 1px 0px 0px; opacity: 0.2; border-radius: 0px; pointer-events: none;"></div>
          </div>
          <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="flex-grow: 1; cursor: pointer;" id="crossover">
           <span class="silk-span-text" style="font-size: 18px; margin: 0px 0px 16px; font-weight: normal; color: white; user-select: none;">КРОССОВЕР</span>
-          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 2px; background-color: rgb(72, 72, 72); margin: 1px 0px 0px; opacity: 0.2; border-radius: 0px;"></div>
+          <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 2px; background-color: rgb(72, 72, 72); margin: 1px 0px 0px; opacity: 0.2; border-radius: 0px; pointer-events: none;"></div>
          </div>
         </div>
         <div class="silk-simple-grid" style="--silk-simple-grid-col-count-zero: 1; --silk-simple-grid-col-count-sm: 1; --silk-simple-grid-col-count-md: 3; --silk-simple-grid-col-count-lg: 3; --silk-simple-grid-col-count-xl: 3; width: 100%; margin: 24px 0px 0px; gap: 20px;">
@@ -169,8 +169,8 @@
          </div>
         </div><span class="silk-span-text" style="max-width: 460px; font-size: 20px; line-height: 30px; padding: 8px 0px 6px; font-weight: 300; color: white;">Мы всегда рады видеть вас! У нас вы можете быстро и комфортно оформить все необходимое для аренды автомобиля.</span>
        </div><a class="silk-link" style="margin: 42px 0px 0px; font-size: 90px; color: white; font-weight: 500; cursor: pointer; text-decoration-line: none;" href="tel:+996772330507" id="contact">+996 (772) 33-05-07</a><span class="silk-span-text" style="margin: 24px 0px 0px; color: white; font-size: 30px; line-height: 38px; font-weight: 300;">Кыргызстан, г.Бишкек, Юнусалиева, 85</span>
-       <div class="default-button kobweb-align-center-horiz-self kobweb-box kobweb-align-center" style="margin: 100px 0px 0px; padding: 2% 8%; border-radius: 80px;" id="contact">
-        <span class="silk-span-text" style="font-weight: bold; font-size: 24px; letter-spacing: 1.2px;">ПОЗВОНИТЕ НАМ</span>
+       <div class="default-button kobweb-align-center-horiz-self kobweb-box kobweb-align-center" style="margin: 100px 0px 0px; padding: 2% 8%; border-radius: 80px; font-weight: bold; font-size: 24px; letter-spacing: 1.2px;" id="contact">
+        ПОЗВОНИТЕ НАМ
        </div>
       </div>
      </div>
